--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,36 @@
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     text-align: center;
 }
+
+.playerBox {
+    border: 1px;
+    border-radius: 10px;
+    border-color: black;
+    border-style: solid;
+    padding: 4px;
+    margin: 2px;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.75);
+}
+
+.playerName {
+    font-size: xx-small;
+    font-family: sans-serif;
+}
+
+.equipGrid {
+    background-color: gray;
+    height: 4em;
+}
+
+.lifebarred {
+    background-color: red;
+    height: 10px;
+    border-radius: 5px;
+}
+
+.lifebargreen {
+    background-color: green;
+    height: 10px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
