--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,8 @@
 }
 
 .enemyCard {
+    font-family: sans-serif;
+    font-size: medium;
     border: 1px;
     border-radius: 10px;
     border-color: black;
@@ -124,7 +126,7 @@
 
 .battleButton {
     font-family: sans-serif;
-    font-size: small;
+    font-size: x-small;
     font-style: bold;
     background-color: orange;
     border: 1px;
@@ -135,3 +137,8 @@
     margin: 2px;
     box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.75);
 }
+
+.battleButton:hover {
+    /* state on hover */
+    transform: scale(1.1);  /* 1.1 means 10% larger */
+  }
