--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,17 @@
     border-bottom-left-radius: 5px;
 }
 
+.initbargray {
+    background-color: gray;
+}
+
+.initbarblue {
+    background-color: blue;
+    height: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
 .roomBox {
     font-family: sans-serif;
     font-size: medium;
